--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         </div>
         <form method="dialog">
           <button
-            type="submit"
+            type="button"
             class="button dialog__button"
             onclick="window['dialog-save'].close()"
           >
