--- a/index.html
+++ b/index.html
@@ -520,7 +520,6 @@
           <button
           class="button footer__button"
           type="button"
-          onclick="window['dialog-save'].showModal();"
           aria-controls="dialog-save"
         >
           <svg
@@ -551,13 +550,13 @@
         </div>
         <form method="dialog">
           <button
-            type="button"
+            type="submit"
             class="button dialog__button"
-            onclick="window['dialog-save'].close()"
           >
             <span class="button__text">ОК</span>
           </button>
         </form>
+
       </div>
     </dialog>
     <script src="./scripts/like.js"></script>
