--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
           <button
             class="button footer__button"
             type="button"
-            id="open-dialog"
+            aria-controls="dialog-save"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -548,18 +548,13 @@
           </svg>
           <span>Вставьте дискету, чтобы продолжить</span>
         </div>
-
-        <button
-          type="button"
-          class="button dialog__button"
-          id="dialog-ok"
-        >
-          <span class="button__text">ОК</span>
-        </button>
+        <form method="dialog">
+          <button type="submit" class="button dialog__button">
+            <span class="button__text">ОК</span>
+          </button>
+        </form>
       </div>
     </dialog>
-
-    <script src="./scripts/dialog.js"></script>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
