--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h1 class="header__description">закрывающий тег</h1>
       </div>
       <nav class="theme-menu header__theme-menu">
+        <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
             <button type="button" data-theme="dark" class="theme-menu__button">
@@ -403,7 +404,6 @@
           />
           <p class="post__cover__watermark">&lt;lifes-style: none;&gt;</p>
         </div>
-        
         <div class="post__content">
           <p>
             Во время учёбы часто возникает чувство, когда не знаешь, за что
@@ -517,24 +517,24 @@
       <div class="main__footer">
         <div class="button__container">
           <button
-            class="button footer__button"
-            type="button"
-            aria-controls="dialog-save"
+          class="button footer__button"
+          type="button"
+          onclick="window['dialog-save'].showModal();"
+          aria-controls="dialog-save"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="21"
+            height="21"
+            viewBox="0 0 21 21"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="21"
-              height="21"
-              viewBox="0 0 21 21"
-            >
-              <use href="./svg/floppy.svg#floppy"></use>
-            </svg>
-            <span class="button__text">Сохранить на&nbsp;память</span>
-          </button>
+            <use href="./svg/floppy.svg#floppy"></use>
+          </svg>
+          <span class="button__text">Сохранить на&nbsp;память</span>
+        </button>
         </div>
       </div>
     </main>
-
     <dialog class="dialog" id="dialog-save">
       <div class="dialog__container">
         <div class="dialog__warning">
@@ -549,7 +549,11 @@
           <span>Вставьте дискету, чтобы продолжить</span>
         </div>
         <form method="dialog">
-          <button type="submit" class="button dialog__button">
+          <button
+            type="submit"
+            class="button dialog__button"
+            onclick="window['dialog-save'].close()"
+          >
             <span class="button__text">ОК</span>
           </button>
         </form>
